--- a/index.html
+++ b/index.html
@@ -113,35 +113,28 @@ object-fit: contain;
         <button id="increment">+</button>
         <button id="reset">reset</button>
     </div>
-    <h1>自動文字サイズ補正サイトのシステムに関する研究</h1>
-    <h2>先生との出会い</h2>
+    <h1>顔表情でフォントサイズ補正するシステムに関する研究</h1>
+    <h2>銀河鉄道の夜　一、午后ごごの授業    </h2>
     <h3></h3>
     <div id="QR">
         <img src="QR.png" alt="QR Code">
     </div>
 
-    <div id="setumei">
-        <p>
-            この研究はWebサイト上の自動フォントサイズ調整機能について研究を行っています。日頃フォントサイズが小さいとなったときに手動で
-            フォントサイズを変更する必要があります。それらを自動で行うために必要な研究です。
-            <br> 以下の文章を読んでいただきます。
-        </p>
+  <div id="setumei">
     </div>
 
     <div id="Sentence">
-        <budoux-ja>私《わたくし》はその人を常に先生と呼んでいた。だからここでもただ先生と書くだけで本名は打ち明けない。
-        これは世間を憚《はば》かる遠慮というよりも、その方が私にとって自然だからである。私はその人の記憶を呼び起すごとに、すぐ「先生」といいたくなる。
-        筆を執《と》っても心持は同じ事である。よそよそしい頭文字《かしらもじ》などはとても使う気にならない。
-        私が先生と知り合いになったのは鎌倉《かまくら》である。その時私はまだ若々しい書生であった。
-        暑中休暇を利用して海水浴に行った友達からぜひ来いという端書《はがき》を受け取ったので、私は多少の金を工面《くめん》して、出掛ける事にした。
-        私は金の工面に二《に》、三日《さんち》を費やした。ところが私が鎌倉に着いて三日と経《た》たないうちに、
-        私を呼び寄せた友達は、急に国元から帰れという電報を受け取った。電報には母が病気だからと断ってあったけれども友達はそれを信じなかった。
-        友達はかねてから国元にいる親たちに勧《すす》まない結婚を強《し》いられていた。彼は現代の習慣からいうと結婚するにはあまり年が若過ぎた。
-        それに肝心《かんじん》の当人が気に入らなかった。それで夏休みに当然帰るべきところを、わざと避けて東京の近くで遊んでいたのである。彼は電報を私に見せてどうしようと相談をした。
-        私にはどうしていいか分らなかった。けれども実際彼の母が病気であるとすれば彼は固《もと》より帰るべきはずであった。それで彼はとうとう帰る事になった。せっかく来た私は一人取り残された。
-        学校の授業が始まるにはまだ大分《だいぶ》日数《ひかず》があるので鎌倉におってもよし、帰ってもよいという境遇にいた私は、当分元の宿に留《と》まる覚悟をした。
-        友達は中国のある資産家の息子《むすこ》で金に不自由のない男であったけれども、学校が学校なのと年が年なので、生活の程度は私とそう変りもしなかった。
-        したがって一人《ひとり》ぼっちになった私は別に恰好《かっこう》な宿を探す面倒ももたなかったのである。</budoux-ja>
+        <budoux-ja>
+            「ではみなさんは、そういうふうに川だと云いわれたり、乳の流れたあとだと云われたりしていたこのぼんやりと白いものがほんとうは何かご承知ですか。」先生は、黒板に吊つるした大きな黒い星座の図の、上から下へ白くけぶった銀河帯のようなところを指さしながら、みんなに問といをかけました。
+　カムパネルラが手をあげました。それから四五人手をあげました。ジョバンニも手をあげようとして、急いでそのままやめました。たしかにあれがみんな星だと、いつか雑誌で読んだのでしたが、このごろはジョバンニはまるで毎日教室でもねむく、本を読むひまも読む本もないので、なんだかどんなこともよくわからないという気持ちがするのでした。
+　ところが先生は早くもそれを見附みつけたのでした。
+「ジョバンニさん。あなたはわかっているのでしょう。」
+　ジョバンニは勢いきおいよく立ちあがりましたが、立って見るともうはっきりとそれを答えることができないのでした。ザネリが前の席からふりかえって、ジョバンニを見てくすっとわらいました。ジョバンニはもうどぎまぎしてまっ赤になってしまいました。先生がまた云いました。
+「大きな望遠鏡で銀河をよっく調べると銀河は大体何でしょう。」
+　やっぱり星だとジョバンニは思いましたがこんどもすぐに答えることができませんでした。
+　先生はしばらく困ったようすでしたが、眼めをカムパネルラの方へ向けて、
+「ではカムパネルラさん。」と名指しました。するとあんなに元気に手をあげたカムパネルラが、やはりもじもじ立ち上ったままやはり答えができませんでした。
+        </budoux-ja>
     </div>
    
    
